//
//   Copyright 2013-2014 AppDynamics.
//   All rights reserved.
//

option java_package = "appdynamics.pb";

package appdynamics.pb.Common;

message StringMatchCondition
{
    enum Type
    {
        EQUALS = 0;
        STARTS_WITH = 1;
        ENDS_WITH = 2;
        CONTAINS = 3;
        MATCHES_REGEX = 4;
        IS_IN_LIST = 5;
        IS_NOT_EMPTY = 6;
    }
    required Type type = 1;
    // Should only contain one string if
    // type is not IS_IN_LIST.
    // Should not contain any strings if
    // type is IS_NOT_EMPTY.
    repeated string matchStrings = 2;
    optional bool isNot = 3;
}

message NameValuePair
{
    required string name = 1;
    required bytes value = 2;
}

